--- a/waitforit/response.tmpl
+++ b/waitforit/response.tmpl
@@ -144,7 +144,7 @@ p#error-box {
   </style>
   {{if css_link}}
   <link rel="stylesheet" href="{{css_link}}" type="text/css">
-  {endif}}
+  {{endif}}
  </head>
  <body onload="checkStatus()">
 
